--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
+    "ahooks": "^3.7.7",
     "AsyncStorage": "^0.1.5",
     "axios": "^1.4.0",
+    "formik": "^2.4.2",
+    "material-ui-confirm": "^3.0.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.3",
+    "use-react-router-breadcrumbs": "^4.0.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
