--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.3",
     "use-react-router-breadcrumbs": "^4.0.1",
