--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "ahooks": "^3.7.7",
     "AsyncStorage": "^0.1.5",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "formik": "^2.4.2",
     "material-ui-confirm": "^3.0.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.1",
