--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
+    "@mui/x-date-pickers": "^6.12.1",
     "ahooks": "^3.7.7",
     "AsyncStorage": "^0.1.5",
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
+    "dayjs": "^1.11.9",
     "formik": "^2.4.2",
     "material-ui-confirm": "^3.0.9",
     "prop-types": "^15.8.1",
